--- a/mopidy_local/www/index.html
+++ b/mopidy_local/www/index.html
@@ -4,20 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Mopidy-Local</title>
-    <script type="text/javascript">
-      var file = "http://" + window.location.host + "/mopidy/mopidy.css",
-        link = document.createElement("link");
-      link.href = file;
-      link.type = "text/css";
-      link.rel = "stylesheet";
-      link.media = "screen,print";
-      document.getElementsByTagName("head")[0].appendChild(link);
-    </script>
+    <link rel="stylesheet" href="/mopidy/mopidy.css" type="text/css" media="screen, print">
     <style>
-      img {
-        width: 63px; height: 63px;
-        padding-left: 2px;
-        padding-right: 2px;
+      #thumbnail_container {
+       display: grid;
+       grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+       grid-gap: 0px;
+       line-height: 0%;
+      }
+      .thumbnail {
+          border: 0px none;
+          max-width: 98%;
+          max-height: 96%;
+          height: auto;
+          width: auto;
       }
     </style>
   </head>
@@ -30,25 +30,15 @@
       </p>
     </div>
     <div class="box">
-      <p>
       <h2 id="b1">Mopidy-Local image cache</h2>
-      </p>
-      <span style="font-size: 0; line-height:0">
+      <span id="thumbnail_container">
         {% for image in images %}
         <a style="border: 0px none;" href="{{image}}">
-          <img src="{{image}}" loading="lazy">
+          <img class="thumbnail" src="{{image}}" loading="lazy">
         </a>
         {% end %}
       </span>
     </div>
   </body>
 </html>
-<script>
-  var imgwidth = (document.getElementById('b1').clientWidth / 8) - 4,
-    css = 'img {height: ' + imgwidth + 'px; width: ' + imgwidth + 'px;}',
-    head = document.head || document.getElementsByTagName('head')[0],
-    style = document.createElement('style');
-  head.appendChild(style);
-  style.type = 'text/css';
-  style.appendChild(document.createTextNode(css));
-</script>
+
