add alt text to thumbnail

--- a/mopidy_local/www/index.html
+++ b/mopidy_local/www/index.html
@@ -34,7 +34,7 @@
       <span id="thumbnail_container">
         {% for image in images %}
         <a style="border: 0px none;" href="{{image}}">
-          <img class="thumbnail" src="{{image}}" loading="lazy">
+          <img class="thumbnail" src="{{image}}" alt="Album art thumbnail; link to full size album art" loading="lazy">
         </a>
         {% end %}
       </span>
