--- a/mopidy_local/www/index.html
+++ b/mopidy_local/www/index.html
@@ -41,3 +41,12 @@
     </div>
   </body>
 </html>
+<script>
+  var imgwidth = document.getElementById('thumbnail').width;
+  var css = '#thumbnail_container img {height: ' + imgwidth + 'px;}';
+  var head = document.head || document.getElementsByTagName('head')[0];
+  var style = document.createElement('style');
+  head.appendChild(style);
+  style.type = 'text/css';
+  style.appendChild(document.createTextNode(css));
+</script>
