--- a/mopidy_local/www/index.html
+++ b/mopidy_local/www/index.html
@@ -38,7 +38,7 @@
           <img src="{{image}}" alt="Album art thumbnail; link to full size album art" loading="lazy">
         </a>
         {% end %}
-      </span>
+      </div>
     </div>
   </body>
 </html>
